@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcontrib.1,v 1.5 2012/06/14 22:51:04 greg Exp $"
+.\" RCSid "$Id: rcontrib.1,v 1.6 2012/11/15 19:41:03 greg Exp $"
 .TH RCONTRIB 1 5/25/05 RADIANCE
 .SH NAME
 rcontrib - compute contribution coefficients in a RADIANCE scene
@@ -101,9 +101,9 @@ The
 option tells
 .I rcontrib
 how many rays to accumulate for each record.
-The default value is 1, meaning a full record will be produced for
+The default value is one, meaning a full record will be produced for
 each input ray.
-For values greater than 1, contributions will be averaged together
+For values greater than one, contributions will be averaged together
 over the given number of input rays.
 If set to zero, only a single record will be produced at the very
 end, corresponding to the sum of all rays given on the input
@@ -113,8 +113,9 @@ This is equivalent to passing all the output records through a program like
 to sum RGB values together, but is much more efficient.
 Using this option, it is possible to reverse sampling, sending rays from
 a parallel source such as the sun to a diffuse surface, for example.
-Note that output flushing via zero-direction rays is disabled
-for accumulated evaluations.
+Note that output flushing via zero-direction rays is disabled with
+.I \-c
+set to zero.
 .PP
 The output of
 .I rcontrib
@@ -168,9 +169,9 @@ it has been defined via a previous
 or
 .I \-e
 option.
-Since bin numbers start from 0, the bin count is always equal to
-the last bin plus 1.
-Set the this value to 0 if the bin count is unknown (the default).
+Since bin numbers start from zero, the bin count is always equal to
+the last bin plus one.
+Set the this value to zero if the bin count is unknown (the default).
 The most recent
 .I \-b,
 .I \-bn
@@ -185,7 +186,7 @@ and
 .I \-y
 if the
 .I \-c
-is 0, when they control the resolution string
+is zero, when they control the resolution string
 produced in the corresponding output.
 .PP
 If a
